Actually fixed centre align on screenshot

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,6 +12,10 @@
     margin: 0 auto;
 }
 
+#screenshot {
+    margin: 0 auto;
+}
+
 .voffset  { margin-top: 2px; }
 .voffset1 { margin-top: 5px; }
 .voffset2 { margin-top: 10px; }
